--- a/android/app/src/main/res/layout/items_salidas.xml
+++ b/android/app/src/main/res/layout/items_salidas.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,26 +18,21 @@
         android:gravity="center"
         android:text="hola" />
 
-
-    <Button
+    <ImageButton
         android:id="@+id/btnon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:background="@color/colorBtnOK"
-        android:text="Encender"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/luz_encendida" />
 
-        android:textColor="@color/colorBtnWhite" />
-
-    <Button
+    <ImageButton
         android:id="@+id/btnof"
-
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:text="Apagar"
-        android:background="@color/colorBtnCancel"
-        android:textColor="@color/colorBtnWhite"/>
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/luz_apagada" />
 
 
 </LinearLayout>
