--- a/android/app/src/main/res/layout/items_salidas.xml
+++ b/android/app/src/main/res/layout/items_salidas.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/salnom"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_weight="4"
         android:gravity="center"
         android:text="hola" />
