--- a/android/app/src/main/res/layout/activity_preferencias.xml
+++ b/android/app/src/main/res/layout/activity_preferencias.xml
@@ -23,7 +23,9 @@
         app:layout_constraintVertical_bias="0.083"
         android:layout_alignBottom="@+id/btn_save"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="11dp" />
+        android:layout_marginBottom="11dp"
+        android:textStyle="bold"
+        android:textSize="26sp"/>
 
     <ImageButton
         android:id="@+id/btn_home"
@@ -41,8 +43,10 @@
 
     <ImageButton
         android:id="@+id/btn_save"
-        android:layout_width="71dp"
-        android:layout_height="73dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.837"
@@ -50,9 +54,51 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.02"
-        app:srcCompat="@drawable/save"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/editTextAlarmNumber"
-        android:layout_marginStart="36dp" />
+        app:srcCompat="@drawable/save" />
+
+    <ImageButton
+        android:id="@+id/btn_actualizar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/btn_save"
+        android:layout_below="@+id/editTextAlarmNumber"
+        android:layout_marginTop="40dp"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/synchronize" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/btn_actualizar"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="28dp"
+        android:layout_marginStart="13dp"
+        android:text="Salidas"
+        android:textAlignment="center"
+        android:textSize="28sp"
+        android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/btn_activaciones"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/btn_actualizar"
+        android:layout_below="@+id/btn_actualizar"
+        android:layout_marginTop="49dp"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/synchronize" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/btn_activaciones"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_marginBottom="23dp"
+        android:text="Activaciones"
+        android:textAlignment="center"
+        android:textSize="28sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
